0.9.2
    - FIX: Use parameter PID_BUILTIN_TOPIC_KEY(0x005a) during discovery
      instead of KeyHash(0x0070)
    - First successful interoperability tests with OpenSplice 6.3 :) 
     
0.9.1
    - Type annotation can be used to set the topic name and type name 
      reported to remote entities. 
    - Possibility to access a specific instance from writers history cache
        
0.9.0
    - DirectedWrite. RTPSReader checks if incoming data contains 
      DirectedWrite inline qos, and if so, accepts Data only if
      there is a matching Guid.
    - CoherentSet support. Coherent sets are handled by udds history
      cache.
    - PropertyList
    - ExpectsInlineQoS. RTPSWriter sends inline QoS to readers with
      each sample, if subscription data during discovery contains
      PID_EXPECTS_INLINE_QOS parameter
    
0.8.8
    - FIX: DataReader.clear() had a bug, samples were not removed.

0.8.7 
    - FIX: Keys for builtin topics are not subject to MD5 digest.
     
0.8.6
    - Added getReaders() and getWriters() to Participant. This allows 
      access to existing entities.
    
0.8.5
    - Added getGuid() method to udds Participant & Entity
     
0.8.4
    - Changed EntityFactory to be a class instead of interface.
    
0.8.3
    - Added EntityFactory. EntityFactory provides means for the application
      to provide custom implementations of entities used by udds.
      
0.8.2
    - Added direct support for java primitive types to RTPSByteBuffer
    
0.8.1
    - Minor fixes, Configuration can be given to participant. Renamed
      DataListener: add/removeListener to add/removeSampleListener.
    - One can configure any number of listener uris. Each successful
      listener uri will be transported to remote entity.
    
0.8.0
    - FIX: QosDestinationOrder is better handled during reception.
      There still remains some incompatibility as timestamp is not compared
      at instance level, but at sample level. 