@@ -4,6 +4,9 @@ o General
       Instead, we should store a List of locators for each. (tcp, ssl, ...).
       Configuration allows to specify multiple locators, but last one is 
       actually propagated to remote participant.
+    - Parameter getBytes() return bytes[] array stored in instance member. 
+      subclasses might not update byte[]. Rethink this. For example, see
+      how KeyHash handles this.
     
 o Quality of Service
     - Use reasonable defaults, configuration, adaptation.
